<resources>
    <string name="app_name">ExpenseTracker</string>
    <string name="wallet">Кошелек</string>
    <string name="settings">Настройки</string>
    <string name="balance">Баланс</string>
    <string name="log_out">Выйти</string>
    <string name="navigation_drawer_open">Открыть панель</string>
    <string name="navigation_drawer_close">Закрыт панель</string>
    <string name="major_currency">Основная валюта</string>
    <string name="rub">рубль</string>
    <string name="usd">доллар</string>
    <string name="rubShort">РУБ</string>
    <string name="usdShort">USD</string>
    <string name="about_application">О приложении</string>
    <string name="other_settings">Другие настройки</string>
    <string name="infoTitle">О приложении</string>
    <string name="fullInfo">Это приложение для учета финансов</string>

    <string name="toolbar_title_finance">ExpenseTracker</string>
    <string name="toolbar_title_settings">Настройки</string>
    <string name="toolbar_title_about">О приложении</string>
    <string name="toolbar_title_transactions">Транзакции</string>
    <string name="validate_toast">Ошибка ввода данных</string>
    <string name="spend">Расход</string>
    <string name="income">Доход</string>


    <string name="food">Еда</string>
    <string name="clothes">Одежда</string>
    <string name="service">Оказание услуг</string>
    <string name="sport">Спорт</string>
    <string name="house">Дом</string>
    <string name="relaxation">Отдых</string>
    <string name="other">Другое</string>
    <string name="icon">Иконка</string>

    <string name="transaction_title_add">Добавить транзакцию</string>
    <string name="transaction_amount">Сколько</string>
    <string name="transaction_category">Категория</string>
    <string name="transaction_currency">Валюта</string>
    <string name="transaction_wallet">Кошелек</string>
    <string name="operation_type">Тип операции</string>
    <string name="add">Добавить</string>
    <string name="chartDescription">Все расходы по кошелькам</string>
    <string name="transaction">Транзакции</string>
    <string name="late">Пока это все</string>
    <string name="rate">Курс:</string>

    <string-array name="currencies">
        <item>@string/rub</item>
        <item>@string/usd</item>
    </string-array>

    <string-array name="operation_type">
        <item>@string/income</item>
        <item>@string/spend</item>
    </string-array>

    <string-array name="transaction_categories">
        <item>@string/food</item>
        <item>@string/clothes</item>
        <item>@string/service</item>
        <item>@string/sport</item>
        <item>@string/house</item>
        <item>@string/relaxation</item>
        <item>@string/other</item>
    </string-array>

    <string name="credit_card">Кредитная карта</string>
    <string name="cash">Наличные</string>
    <string name="bank_account">Банковский счет</string>

    <string-array name="wallets">
        <item>@string/credit_card</item>
        <item>@string/cash</item>
        <item>@string/bank_account</item>
    </string-array>

</resources>
