<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/ic_account_balance_black_24dp"
            android:title="@string/wallet" />
    </group>

    <group
        android:id="@+id/menu_prefs">
        <item
            android:id="@+id/nav_transaction"
            android:checkable="false"
            android:icon="@drawable/ic_terrain_black_24dp"
            android:title="@string/transaction"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:checkable="false"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/about_application">
        </item>
    </group>
</menu>
