<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="150dp">

    <TextView
        android:id="@+id/tv_current_major_currency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="4dp"
        android:text="@string/major_currency"
        style="@style/TextStyle.Small"/>

    <TextView
        android:id="@+id/tv_major_currency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/rub"
        android:textAlignment="textStart"
        android:background="@color/white"
        android:layout_below="@id/tv_current_major_currency"
        style="@style/TextStyle.Large" />

    <TextView
        android:id="@+id/tv_other_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_major_currency"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="4dp"
        android:text="@string/other_settings"
        style="@style/TextStyle.Small"/>

    <TextView
        android:id="@+id/tv_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/about_application"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:background="@color/white"
        android:layout_below="@id/tv_other_settings"
        style="@style/TextStyle"/>

</RelativeLayout>